Update the template directory structure
New template directory structure follows naming based on purpose rather than language.

Added a new templates as well:

  - templates/ai/invokeai/invokeai-model-install-exposed.yaml detects exposed InvokeAI model install endpoint tied to CVE-2024-12029.
  - templates/ai/torchserve/torchserve-management-api-exposed.yaml detects exposed TorchServe management API (CVE-2022-1471, CVE-2023-43654 context).
  - templates/ai/triton/triton-model-control-exposed.yaml detects exposed Triton model repository control (CVE-2023-31036 context).
  - templates/ai/flowise/flowise-custommcp-js-eval-exposed.yaml (CVE-2025-59528)
  - templates/ai/flowise/flowise-custommcp-command-endpoint-exposed.yaml (CVE-2025-8943)
- template validate templates/ai/cursor/cursor-mcpoison-config-risk.py

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,12 @@ results/
 *.result
 
 # =============================================================================
+# Skills and local progress (do not push)
+# =============================================================================
+templates/skills/
+templates/notes.md
+
+# =============================================================================
 # Disabled Templates (keep in repo but can be excluded if needed)
 # =============================================================================
 # Uncomment to exclude disabled templates from commits:
